--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -3,7 +3,7 @@ FROM php:8.2-fpm-alpine3.16
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 
 RUN chmod +x /usr/local/bin/install-php-extensions \
-	&& install-php-extensions gd exif bcmath zip \
+	&& install-php-extensions bcmath \
 	&& docker-php-ext-install pdo_mysql
 
 COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
