--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mariadb
 DB_PORT=3306
-DB_DATABASE=sneakerdark
+DB_DATABASE=instagram_parser
 DB_USERNAME=root
 DB_PASSWORD=
 
