--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,15 @@
 	"require": {
 		"php": "^8.0.2",
 		"guzzlehttp/guzzle": "^7.2",
-		"laravel/framework": "^9.19",
+		"laravel/framework": "^10.0",
 		"laravel/tinker": "^2.7"
 	},
 	"require-dev": {
 		"fakerphp/faker": "^1.9.1",
 		"mockery/mockery": "^1.4.4",
-		"nunomaduro/collision": "^6.1",
-		"phpunit/phpunit": "^9.5.10",
-		"spatie/laravel-ignition": "^1.0"
+		"nunomaduro/collision": "^7.0",
+		"phpunit/phpunit": "^10.0",
+		"spatie/laravel-ignition": "^2.0"
 	},
 	"autoload": {
 		"psr-4": {
@@ -57,6 +57,6 @@
 			"pestphp/pest-plugin": true
 		}
 	},
-	"minimum-stability": "dev",
+	"minimum-stability": "stable",
 	"prefer-stable": true
 }
