Исправление ошибок и добавление iam-формата

--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -21,12 +21,12 @@ services:
       - database
       - default
 
-  # queue:
-  #   restart: unless-stopped
-  #   networks:
-  #     - database
-  #     - default
-  #   command: sh -c "php artisan queue:work"
+  queue:
+    restart: unless-stopped
+    networks:
+      - database
+      - default
+    command: sh -c "php artisan queue:work"
 
   nginx:
     restart: unless-stopped
